fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -504,15 +504,17 @@ header .img-container > img {
 	border: 4px solid var(--primary-color);
 }
 .contact-text{
-	padding: 30px;
+	padding: 20px;
 	line-height: 1.6;
 }
 
 .contact-text > h2{
 	font-size: 3rem;
+	padding:10px 0;
 }
 .contact-text > p{
 	font-size: 2.5rem;
+	padding: 10px 0;
 }
 
 .contact-text > a{
@@ -521,6 +523,7 @@ header .img-container > img {
 	color: #fff;
 	text-decoration: none;
 	padding: 10px 30px;
+	margin-top: 10px;
 }
 
 @media only screen and (max-width: 767.9px) {
